add support for removable storage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,5 +149,7 @@
     <string name="grant_access">Grant Access</string>
     <string name="storage_access_permission_text">We need access to your storage to proceed. Please grant the necessary permissions.</string>
     <string name="archive_success">File archived successfully</string>
+    <string name="sd_card">SD Card</string>
+    <string name="permission_not_granted">Permission not granted</string>
 
 </resources>
