remove unused resource, refactor code

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,59 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="selected_file_cleared">Ficheiro selecionado limpo</string>
     <string name="enter_password">Digite a palavra-passe</string>
-    <string name="output_file_name">Nome.zip</string>
-    <string name="not_encrypted">Não cifrado</string>
     <string name="zip_creation_success">Ficheiro Zip criado com sucesso</string>
-    <string name="please_select_files">Selecione os ficheiros</string>
     <string name="zip_creation_failed">Erro ao criar o ficheiro Zip</string>
     <string name="share">Partilhar aplicação</string>
-    <string name="pick_file">Escolha o ficheiro</string>
     <string name="extract">Extrair</string>
-    <string name="extract_to">Extrair para</string>
-    <string name="not_selected">Não selecionado</string>
-    <string name="selected_file_text">Ficheiro selecionado: %1$s</string>
-    <string name="directory_path">Pasta selecionada: %1$s</string>
     <string name="no_file_selected">Nenhum ficheiro selecionado</string>
-    <string name="selected_files_text">Ficheiros selecionados: %1$d</string>
-    <string name="no_directory_selected">Nenhum diretório selecionado</string>
-    <string name="percent">%</string>
-    <string name="version">Versão:</string>
-    <string name="save_zip_to">Guardar Zip em</string>
     <string name="create_zip">Comprimir ZIP</string>
-    <string name="select">Selecionar</string>
-    <string name="file">Ficheiro</string>
-    <string name="files">Ficheiros</string>
     <string name="folder">Pasta</string>
     <string name="donate">Doar</string>
     <string name="liberapay">Liberapay</string>
-    <string name="create">Criar</string>
     <string name="encryption_method">Método de cifra</string>
     <string name="compression_level">Nível de compressão</string>
     <string name="compression_method">Método de compressão</string>
-    <string name="compression_settings">Definições de compressão</string>
-    <string name="file_picked_success">Ficheiro selecionado com sucesso</string>
-    <string name="file_picked_fail">Nenhum ficheiro selecionado</string>
     <string name="settings_info_text">O método de criptografia padrão para arquivos é AES, que fornece um alto nível de segurança. No entanto, esteja ciente de que a criptografia AES pode ser demorada, especialmente em dispositivos de baixo custo.\n\nPara usuários com dispositivos menos potentes, uma alternativa como ZIP_STANDARD pode ser usada. No entanto, observe que este método não oferece o mesmo nível de segurança que o AES.\n\nSe a segurança for sua principal preocupação, recomendamos fortemente o uso do AES, apesar do tempo de processamento mais longo.</string>
     <string name="ok">OK</string>
-    <string name="output_directory_cleared">Diretório de saída limpo</string>
-    <string name="password">palavra-passe</string>
-    <string name="zip_without_zip">Nome do Zip (sem .zip)</string>
-    <string name="encrypt">Cifrar</string>
-    <string name="select_output_directory">Selecione o diretório de destino</string>
-    <string name="files_select_request">Selecione os ficheiros</string>
     <string name="open_folder">Abrir pasta</string>
-    <string name="save">Guardar</string>
     <string name="copied_to_clipboard">Copiado para a área de transferência</string>
-    <string name="pick_file_extract">Selecione o ficheiro a extrair</string>
     <string name="permission_denied">Permissão recusada</string>
-    <string name="permission_required">Tem que conceder o acesso ao armazenamento para extrair ficheiros</string>
-    <string name="open_settings">Abrir definições</string>
     <string name="cancel">Cancelar</string>
-    <string name="select_output_directory_extract">Selecione para onde extrair os ficheiros</string>
-    <string name="archive_file_name_failed">Falha ao obter o nome do ficheiro</string>
-    <string name="invalid_uri">O URI do ficheiro é inválido</string>
-    <string name="extraction_failed">Falha ao extrair: %1$s</string>
+    <string name="extraction_failed">Falha ao extrair</string>
     <string name="no_password">Sem palavra-passe</string>
     <string name="extraction_success">Ficheiro extraído com sucesso</string>
     <string name="sevenz_creation_success">Ficheiro 7z criado com sucesso</string>
@@ -64,7 +30,6 @@
     <string name="thread_count">Número de processos</string>
     <string name="enter_name_of_archive_optional">Indique o nome do ficheiro (opcional)</string>
     <string name="split_size_mb">Tamanho da separação</string>
-    <string name="please_wait_end_of_job">Por favor aguarde... Se escolheu ficheiros grandes, pode demorar algum tempo</string>
     <string name="split_zip">Separar Zip</string>
     <string name="encryption_strength">Nível de cifra</string>
     <string name="_ten">Padrão é 64kb</string>
