--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,44 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="extract">解壓縮</string>
-    <string name="extract_to">解壓縮至</string>
-    <string name="not_selected">未選取</string>
-    <string name="selected_file_text">已選取檔案：%1$s</string>
     <string name="no_file_selected">未有選取檔案</string>
-    <string name="selected_files_text">已選取檔案：%1$d</string>
-    <string name="percent">%</string>
-    <string name="version">版本：</string>
     <string name="create_zip">壓縮成 ZIP</string>
-    <string name="file">檔案</string>
-    <string name="files">檔案</string>
     <string name="donate">捐款</string>
-    <string name="create">建立</string>
     <string name="encryption_method">加密方法</string>
     <string name="compression_level">壓縮層級</string>
     <string name="compression_method">壓縮方法</string>
-    <string name="compression_settings">壓縮設定</string>
-    <string name="file_picked_fail">未有選取檔案</string>
     <string name="ok">確定</string>
-    <string name="output_directory_cleared">已清除輸出目錄</string>
-    <string name="selected_file_cleared">已清除選取檔案</string>
     <string name="enter_password">請輸入密碼</string>
-    <string name="password">密碼</string>
-    <string name="zip_without_zip">壓縮檔名稱 (不包括 .zip)</string>
-    <string name="encrypt">加密</string>
-    <string name="output_file_name">壓縮檔.zip</string>
-    <string name="not_encrypted">未加密</string>
-    <string name="please_select_files">請選取檔案</string>
-    <string name="select_output_directory">請選取輸出目錄</string>
     <string name="zip_creation_success">Zip 檔案建立成功</string>
     <string name="open_folder">開啟資料夾</string>
-    <string name="save">儲存</string>
     <string name="copied_to_clipboard">已複製至剪貼簿</string>
     <string name="permission_denied">權限被拒</string>
-    <string name="permission_required">須要儲存空間權限以便解壓縮檔案</string>
-    <string name="open_settings">開啟設定</string>
-    <string name="select_output_directory_extract">請選取要解壓縮檔案到何處</string>
-    <string name="invalid_uri">封存檔 URI 無效</string>
-    <string name="extraction_failed">解壓縮失敗：</string>
+    <string name="extraction_failed">解壓縮失敗</string>
     <string name="no_password">無密碼</string>
     <string name="extraction_success">檔案解壓縮成功</string>
     <string name="share">分享應用程式連結</string>
@@ -47,23 +22,14 @@
     <string name="thread_count">執行緒數目</string>
     <string name="max_available_thread">0 代表最大可用執行緒</string>
     <string name="solid_compression">結實壓縮</string>
-    <string name="pick_file">挑選檔案</string>
-    <string name="directory_path">已選取資料夾：%1$s</string>
-    <string name="no_directory_selected">未有選取目錄</string>
-    <string name="save_zip_to">儲存壓縮檔至</string>
-    <string name="select">選取</string>
     <string name="folder">資料夾</string>
     <string name="liberapay">Liberapay</string>
-    <string name="file_picked_success">檔案挑選成功</string>
     <string name="settings_info_text">檔案的加密方法預設為 AES，提供高層級安全性。惟 AES 加密或相當耗時，尤其是較低階的裝置。
 \n
 \n裝置較遜色的使用者，可改用替代方法如 ZIP_STANDARD。惟請注意，此方法並不提供與 AES 同等的安全性。
 \n
 \n若您的首要考慮是安全性，強烈建議使用 AES，雖則處理時間或會較長。</string>
     <string name="zip_creation_failed">建立 zip 檔案時發生錯誤</string>
-    <string name="files_select_request">請選取檔案</string>
-    <string name="pick_file_extract">請挑選要解壓縮的檔案</string>
-    <string name="archive_file_name_failed">無法取得封存檔名</string>
     <string name="cancel">取消</string>
     <string name="sevenz_creation_success">7z 檔案建立成功</string>
     <string name="enter_name_of_archive_optional">輸入封存名稱 (選用)</string>
@@ -71,5 +37,4 @@
     <string name="split_zip">分割 Zip</string>
     <string name="encryption_strength">加密強度</string>
     <string name="_ten">預設為 64kb</string>
-    <string name="please_wait_end_of_job">請稍候… 若您選取了大型檔案，可能需時較久</string>
 </resources>
